CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/sfrosit_t_sbsd_case_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_sbsd_case_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_sbsd_case_hist</externalName>
    <label>Case History</label>
    <pluralLabel>Case History</pluralLabel>
</CustomObject>