CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/adr_city_provr__c.field-meta.xml
<CustomField>
    <fullName>adr_city_provr__c</fullName>
    <description>adr_city_provr</description>
    <externalDeveloperName>adr_city_provr</externalDeveloperName>
    <label>provider city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>