CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/adr_line_1_provr__c.field-meta.xml
<CustomField>
    <fullName>adr_line_1_provr__c</fullName>
    <description>adr_line_1_provr</description>
    <externalDeveloperName>adr_line_1_provr</externalDeveloperName>
    <label>Provider Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>