CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/adr_state_provr__c.field-meta.xml
<CustomField>
    <fullName>adr_state_provr__c</fullName>
    <description>adr_state_provr</description>
    <externalDeveloperName>adr_state_provr</externalDeveloperName>
    <label>Provider State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>