CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/adr_zip_provr__c.field-meta.xml
<CustomField>
    <fullName>adr_zip_provr__c</fullName>
    <description>adr_zip_provr</description>
    <externalDeveloperName>adr_zip_provr</externalDeveloperName>
    <label>Provider Zip code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>