CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/cde_asst_hsng__c.field-meta.xml
<CustomField>
    <fullName>cde_asst_hsng__c</fullName>
    <description>cde_asst_hsng</description>
    <externalDeveloperName>cde_asst_hsng</externalDeveloperName>
    <label>Housing Assitance Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>