CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/cde_county__c.field-meta.xml
<CustomField>
    <fullName>cde_county__c</fullName>
    <description>cde_county</description>
    <externalDeveloperName>cde_county</externalDeveloperName>
    <label>County code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>