CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/cde_lang_corr__c.field-meta.xml
<CustomField>
    <fullName>cde_lang_corr__c</fullName>
    <description>cde_lang_corr</description>
    <externalDeveloperName>cde_lang_corr</externalDeveloperName>
    <label>Correspondence language code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>