CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/cde_rcvd_packet_redet__c.field-meta.xml
<CustomField>
    <fullName>cde_rcvd_packet_redet__c</fullName>
    <description>cde_rcvd_packet_redet</description>
    <externalDeveloperName>cde_rcvd_packet_redet</externalDeveloperName>
    <label>Code received Packet Redetermination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>