CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/cde_reason_waiver_intv__c.field-meta.xml
<CustomField>
    <fullName>cde_reason_waiver_intv__c</fullName>
    <description>cde_reason_waiver_intv</description>
    <externalDeveloperName>cde_reason_waiver_intv</externalDeveloperName>
    <label>Interview waiver reason</label>
    <length>3</length>
    <type>Text</type>
</CustomField>