CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/cde_school_dist__c.field-meta.xml
<CustomField>
    <fullName>cde_school_dist__c</fullName>
    <description>cde_school_dist</description>
    <externalDeveloperName>cde_school_dist</externalDeveloperName>
    <label>School District</label>
    <length>6</length>
    <type>Text</type>
</CustomField>