CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/cde_status_wtlst__c.field-meta.xml
<CustomField>
    <fullName>cde_status_wtlst__c</fullName>
    <description>cde_status_wtlst</description>
    <externalDeveloperName>cde_status_wtlst</externalDeveloperName>
    <label>Waitlist status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>