CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/cnt_cc_need_child__c.field-meta.xml
<CustomField>
    <fullName>cnt_cc_need_child__c</fullName>
    <description>cnt_cc_need_child</description>
    <externalDeveloperName>cnt_cc_need_child</externalDeveloperName>
    <label>Needy Children count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>