CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/cnt_size_family__c.field-meta.xml
<CustomField>
    <fullName>cnt_size_family__c</fullName>
    <description>cnt_size_family</description>
    <externalDeveloperName>cnt_size_family</externalDeveloperName>
    <label>Family Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>