CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/dte_appln__c.field-meta.xml
<CustomField>
    <fullName>dte_appln__c</fullName>
    <description>dte_appln</description>
    <externalDeveloperName>dte_appln</externalDeveloperName>
    <label>Application date</label>
    <type>Date</type>
</CustomField>