CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/dte_begin_resdt__c.field-meta.xml
<CustomField>
    <fullName>dte_begin_resdt__c</fullName>
    <description>dte_begin_resdt</description>
    <externalDeveloperName>dte_begin_resdt</externalDeveloperName>
    <label>Residency Begin date</label>
    <type>Date</type>
</CustomField>