CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/dte_chgd_last_data_eligty__c.field-meta.xml
<CustomField>
    <fullName>dte_chgd_last_data_eligty__c</fullName>
    <description>dte_chgd_last_data_eligty</description>
    <externalDeveloperName>dte_chgd_last_data_eligty</externalDeveloperName>
    <label>Eligibility last modified date</label>
    <type>Date</type>
</CustomField>