CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/dte_perfd_intv__c.field-meta.xml
<CustomField>
    <fullName>dte_perfd_intv__c</fullName>
    <description>dte_perfd_intv</description>
    <externalDeveloperName>dte_perfd_intv</externalDeveloperName>
    <label>Interview preferred date</label>
    <type>Date</type>
</CustomField>