CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/dte_rcvd_doc_intake_last__c.field-meta.xml
<CustomField>
    <fullName>dte_rcvd_doc_intake_last__c</fullName>
    <description>dte_rcvd_doc_intake_last</description>
    <externalDeveloperName>dte_rcvd_doc_intake_last</externalDeveloperName>
    <label>Received Date Document Intake last</label>
    <type>Date</type>
</CustomField>