CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/dte_redet_case__c.field-meta.xml
<CustomField>
    <fullName>dte_redet_case__c</fullName>
    <description>dte_redet_case</description>
    <externalDeveloperName>dte_redet_case</externalDeveloperName>
    <label>Case Retermination Date</label>
    <type>Date</type>
</CustomField>