CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/dte_sent_packet_redet__c.field-meta.xml
<CustomField>
    <fullName>dte_sent_packet_redet__c</fullName>
    <description>dte_sent_packet_redet</description>
    <externalDeveloperName>dte_sent_packet_redet</externalDeveloperName>
    <label>Redetermination packet sent date</label>
    <type>Date</type>
</CustomField>