CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/idn_appln__c.field-meta.xml
<CustomField>
    <fullName>idn_appln__c</fullName>
    <description>idn_appln</description>
    <externalDeveloperName>idn_appln</externalDeveloperName>
    <label>Application ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>