CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/idn_case_legacy__c.field-meta.xml
<CustomField>
    <fullName>idn_case_legacy__c</fullName>
    <description>idn_case_legacy</description>
    <externalDeveloperName>idn_case_legacy</externalDeveloperName>
    <label>Legacy Case Identifier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>