CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/idn_peak_appln__c.field-meta.xml
<CustomField>
    <fullName>idn_peak_appln__c</fullName>
    <description>idn_peak_appln</description>
    <externalDeveloperName>idn_peak_appln</externalDeveloperName>
    <label>Peak Application ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>