CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_assist_provr__c.field-meta.xml
<CustomField>
    <fullName>ind_assist_provr__c</fullName>
    <description>ind_assist_provr</description>
    <externalDeveloperName>ind_assist_provr</externalDeveloperName>
    <label>Provider assistance indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>