CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_assmt_days_45__c.field-meta.xml
<CustomField>
    <fullName>ind_assmt_days_45__c</fullName>
    <description>ind_assmt_days_45</description>
    <externalDeveloperName>ind_assmt_days_45</externalDeveloperName>
    <label>45 Days Assesment Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>