CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_asst_hsng_addl__c.field-meta.xml
<CustomField>
    <fullName>ind_asst_hsng_addl__c</fullName>
    <description>ind_asst_hsng_addl</description>
    <externalDeveloperName>ind_asst_hsng_addl</externalDeveloperName>
    <label>Additional Housing Assitance Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>