CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_chgd_data_eligty__c.field-meta.xml
<CustomField>
    <fullName>ind_chgd_data_eligty__c</fullName>
    <description>ind_chgd_data_eligty</description>
    <externalDeveloperName>ind_chgd_data_eligty</externalDeveloperName>
    <label>Eligibility data changed?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>