CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_chp__c.field-meta.xml
<CustomField>
    <fullName>ind_chp__c</fullName>
    <description>ind_chp</description>
    <externalDeveloperName>ind_chp</externalDeveloperName>
    <label>Medicaid/CHP+ Assistance?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>