CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_chp_addl__c.field-meta.xml
<CustomField>
    <fullName>ind_chp_addl__c</fullName>
    <description>ind_chp_addl</description>
    <externalDeveloperName>ind_chp_addl</externalDeveloperName>
    <label>Medicaid/CHP+ Assistance Additional?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>