CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_client_signed__c.field-meta.xml
<CustomField>
    <fullName>ind_client_signed__c</fullName>
    <description>ind_client_signed</description>
    <externalDeveloperName>ind_client_signed</externalDeveloperName>
    <label>Signed client?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>