CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_elg_pre_provr__c.field-meta.xml
<CustomField>
    <fullName>ind_elg_pre_provr__c</fullName>
    <description>ind_elg_pre_provr</description>
    <externalDeveloperName>ind_elg_pre_provr</externalDeveloperName>
    <label>Provider Pre Eligible?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>