CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_emerg_declrd_fed__c.field-meta.xml
<CustomField>
    <fullName>ind_emerg_declrd_fed__c</fullName>
    <description>ind_emerg_declrd_fed</description>
    <externalDeveloperName>ind_emerg_declrd_fed</externalDeveloperName>
    <label>Emergency Declared Federal?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>