CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_food_pgm__c.field-meta.xml
<CustomField>
    <fullName>ind_food_pgm__c</fullName>
    <description>ind_food_pgm</description>
    <externalDeveloperName>ind_food_pgm</externalDeveloperName>
    <label>Food Program?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>