CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_food_pgm_addl__c.field-meta.xml
<CustomField>
    <fullName>ind_food_pgm_addl__c</fullName>
    <description>ind_food_pgm_addl</description>
    <externalDeveloperName>ind_food_pgm_addl</externalDeveloperName>
    <label>Food Program additional?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>