CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_fs_rcvng__c.field-meta.xml
<CustomField>
    <fullName>ind_fs_rcvng__c</fullName>
    <description>ind_fs_rcvng</description>
    <externalDeveloperName>ind_fs_rcvng</externalDeveloperName>
    <label>FS receiving?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>