CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_head_start_addl__c.field-meta.xml
<CustomField>
    <fullName>ind_head_start_addl__c</fullName>
    <description>ind_head_start_addl</description>
    <externalDeveloperName>ind_head_start_addl</externalDeveloperName>
    <label>Head Start Date</label>
    <length>1</length>
    <type>Text</type>
</CustomField>