CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_idea_3_5__c.field-meta.xml
<CustomField>
    <fullName>ind_idea_3_5__c</fullName>
    <description>ind_idea_3_5</description>
    <externalDeveloperName>ind_idea_3_5</externalDeveloperName>
    <label>Household receives IDEA Part C (3-5)?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>