CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_income_fed_other_addl__c.field-meta.xml
<CustomField>
    <fullName>ind_income_fed_other_addl__c</fullName>
    <description>ind_income_fed_other_addl</description>
    <externalDeveloperName>ind_income_fed_other_addl</externalDeveloperName>
    <label>Other federal additional income ?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>