CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_issue_card_prim_crtkr__c.field-meta.xml
<CustomField>
    <fullName>ind_issue_card_prim_crtkr__c</fullName>
    <description>ind_issue_card_prim_crtkr</description>
    <externalDeveloperName>ind_issue_card_prim_crtkr</externalDeveloperName>
    <label>card Issuance Primary Caretaker?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>