CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_leap__c.field-meta.xml
<CustomField>
    <fullName>ind_leap__c</fullName>
    <description>ind_leap</description>
    <externalDeveloperName>ind_leap</externalDeveloperName>
    <label>Receiving Low-Income Energy Assistance?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>