CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_other__c.field-meta.xml
<CustomField>
    <fullName>ind_other__c</fullName>
    <description>ind_other</description>
    <externalDeveloperName>ind_other</externalDeveloperName>
    <label>Other?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>