CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_pension__c.field-meta.xml
<CustomField>
    <fullName>ind_pension__c</fullName>
    <description>ind_pension</description>
    <externalDeveloperName>ind_pension</externalDeveloperName>
    <label>Receiving Old Age Pension?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>