CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_refugee__c.field-meta.xml
<CustomField>
    <fullName>ind_refugee__c</fullName>
    <description>ind_refugee</description>
    <externalDeveloperName>ind_refugee</externalDeveloperName>
    <label>Receiving Refugee Medical Assistance?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>