CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_resdt__c.field-meta.xml
<CustomField>
    <fullName>ind_resdt__c</fullName>
    <description>ind_resdt</description>
    <externalDeveloperName>ind_resdt</externalDeveloperName>
    <label>Residency indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>