CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_ssi__c.field-meta.xml
<CustomField>
    <fullName>ind_ssi__c</fullName>
    <description>ind_ssi</description>
    <externalDeveloperName>ind_ssi</externalDeveloperName>
    <label>Receiving Supplemental Security Income?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>