CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_tanf_month_six__c.field-meta.xml
<CustomField>
    <fullName>ind_tanf_month_six__c</fullName>
    <description>ind_tanf_month_six</description>
    <externalDeveloperName>ind_tanf_month_six</externalDeveloperName>
    <label>Received TANF six months?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>