CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_verif_pndg_data__c.field-meta.xml
<CustomField>
    <fullName>ind_verif_pndg_data__c</fullName>
    <description>ind_verif_pndg_data</description>
    <externalDeveloperName>ind_verif_pndg_data</externalDeveloperName>
    <label>Pending verification?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>