CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_wic__c.field-meta.xml
<CustomField>
    <fullName>ind_wic__c</fullName>
    <description>ind_wic</description>
    <externalDeveloperName>ind_wic</externalDeveloperName>
    <label>Receiving Women, Infants and Child Pgm?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>