CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/ind_wic_addl__c.field-meta.xml
<CustomField>
    <fullName>ind_wic_addl__c</fullName>
    <description>ind_wic_addl</description>
    <externalDeveloperName>ind_wic_addl</externalDeveloperName>
    <label>If not, would you like information?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>