CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/loc_elg_determ__c.field-meta.xml
<CustomField>
    <fullName>loc_elg_determ__c</fullName>
    <description>loc_elg_determ</description>
    <externalDeveloperName>loc_elg_determ</externalDeveloperName>
    <label>Who determined eligibility?</label>
    <length>3</length>
    <type>Text</type>
</CustomField>