CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/nam_faclty_provr__c.field-meta.xml
<CustomField>
    <fullName>nam_faclty_provr__c</fullName>
    <description>nam_faclty_provr</description>
    <externalDeveloperName>nam_faclty_provr</externalDeveloperName>
    <label>Facility Name</label>
    <length>51</length>
    <type>Text</type>
</CustomField>