CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/nam_first_provr__c.field-meta.xml
<CustomField>
    <fullName>nam_first_provr__c</fullName>
    <description>nam_first_provr</description>
    <externalDeveloperName>nam_first_provr</externalDeveloperName>
    <label>Facility First Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>