CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/nam_last_provr__c.field-meta.xml
<CustomField>
    <fullName>nam_last_provr__c</fullName>
    <description>nam_last_provr</description>
    <externalDeveloperName>nam_last_provr</externalDeveloperName>
    <label>Facility last name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>