CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/pre_elg_determ__c.field-meta.xml
<CustomField>
    <fullName>pre_elg_determ__c</fullName>
    <description>pre_elg_determ</description>
    <externalDeveloperName>pre_elg_determ</externalDeveloperName>
    <label>Eligibility Determination date</label>
    <length>2</length>
    <type>Text</type>
</CustomField>