CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_hist__x/fields/txt_other__c.field-meta.xml
<CustomField>
    <fullName>txt_other__c</fullName>
    <description>txt_other</description>
    <externalDeveloperName>txt_other</externalDeveloperName>
    <label>Other Text</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>